hphp/hack/test/typecheck/defined/if_do_2.php.exp
File "if_do_2.php", line 14, characters 10-11:
Variable `$y` is undefined, or not always defined. (Naming[2050])
File "if_do_2.php", line 3, characters 19-20:
Did you mean `$b` instead?
